@@ -34,6 +34,8 @@ import org.apache.lucene.util.CollectionUtil;
 import org.apache.lucene.util.Counter;
 import org.apache.lucene.util.FixedBitSet;
 import org.apache.lucene.util.IntBlockPool;
+import org.apache.lucene.util.IntsRef;
+import org.apache.lucene.util.LongsRef;
 import org.apache.lucene.util.TimSorter;
 import org.apache.lucene.util.automaton.CompiledAutomaton;
 
@@ -228,12 +230,12 @@ final class FreqProxTermsWriter extends TermsHash {
 
       private int[] docs;
       private int[] freqs;
-      private final int[] tmpDocs;
+      private int[] tmpDocs;
       private int[] tmpFreqs;
 
       DocFreqSorter(int maxDoc) {
-        super(maxDoc / 64);
-        this.tmpDocs = new int[maxDoc / 64];
+        super(maxDoc / 8);
+        this.tmpDocs = IntsRef.EMPTY_INTS;
       }
 
       public void reset(int[] docs, int[] freqs) {
@@ -272,6 +274,12 @@ final class FreqProxTermsWriter extends TermsHash {
 
       @Override
       protected void save(int i, int len) {
+        if (tmpDocs.length < len) {
+          tmpDocs = new int[ArrayUtil.oversize(len, Integer.BYTES)];
+          if (freqs != null) {
+            tmpFreqs = new int[tmpDocs.length];
+          }
+        }
         System.arraycopy(docs, i, tmpDocs, 0, len);
         if (freqs != null) {
           System.arraycopy(freqs, i, tmpFreqs, 0, len);
@@ -423,13 +431,13 @@ final class FreqProxTermsWriter extends TermsHash {
 
       private int[] docs;
       private long[] offsets;
-      private final int[] tmpDocs;
-      private final long[] tmpOffsets;
+      private int[] tmpDocs;
+      private long[] tmpOffsets;
 
       public DocOffsetSorter(int maxDoc) {
-        super(maxDoc / 64);
-        this.tmpDocs = new int[maxDoc / 64];
-        this.tmpOffsets = new long[maxDoc / 64];
+        super(maxDoc / 8);
+        this.tmpDocs = IntsRef.EMPTY_INTS;
+        this.tmpOffsets = LongsRef.EMPTY_LONGS;
       }
 
       public void reset(int[] docs, long[] offsets) {
@@ -461,6 +469,10 @@ final class FreqProxTermsWriter extends TermsHash {
 
       @Override
       protected void save(int i, int len) {
+        if (tmpDocs.length < len) {
+          tmpDocs = new int[ArrayUtil.oversize(len, Integer.BYTES)];
+          tmpOffsets = new long[tmpDocs.length];
+        }
         System.arraycopy(docs, i, tmpDocs, 0, len);
         System.arraycopy(offsets, i, tmpOffsets, 0, len);
       }
